# meetups

./: readme.md
2021-11-02/: notes.md  slides.md
2021-11-02/demos/rayon-demo/src/: main.rs  parallel.rs  processing_data.rs  serial.rs  utils.rs
2021-11-02/demos/warp-demo/: Cargo.toml
2021-11-02/demos/warp-demo/requests/: requests.http
2021-11-02/demos/warp-demo/src/: main.rs
2021-11-02/demos/warp-demo/src/api/: recovery.rs
2021-11-02/demos/warp-demo/src/api/stateful/: handlers.rs  mod.rs
2021-11-02/demos/warp-demo/src/api/stateless/: routes.rs
2021-11-02/rayon-demo/: Cargo.toml
2021-11-02/rayon-demo/src/: parallel.rs  processing_data.rs  serial.rs  utils.rs
2021-11-02/warp-demo/src/api/: entities.rs  error.rs  mod.rs  state.rs
2021-11-02/warp-demo/src/api/stateless/: mod.rs  routes.rs
2021-12-14/: notes.md  slides.md
2021-12-14/ownership/: Cargo.toml  notes.md
2021-12-14/ownership/src/: borrowing.rs  main.rs  moving.rs  mutability.rs  scope.rs  shadowing.rs
rayon-demo/src/: main.rs  parallel.rs  processing_data.rs
warp-demo/: readme.md
warp-demo/requests/: requests.http
warp-demo/src/api/: utils.rs
warp-demo/src/api/stateful/: routes.rs
