[package]
name = "warp-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3.1"
